# Mkernel

./: CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  MULTI_PLATFORM_ARCHITECTURE.md  MULTI_PLATFORM_EXAMPLES.md  README.md  p.py
messaging-kernel/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  KAFKA_LEVEL_ENHANCEMENTS.md  LICENSE  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  README.md
messaging-kernel/bindings/flutter/: pubspec.yaml
messaging-kernel/bindings/flutter/lib/: neo_protocol.dart
messaging-kernel/bindings/flutter/lib/src/core/: neo_message.dart
messaging-kernel/bindings/go/: neo_protocol.go  neo_protocol.h
messaging-kernel/bindings/kotlin/: build.gradle.kts
messaging-kernel/bindings/kotlin/src/commonMain/kotlin/com/neo/protocol/: NeoProtocol.kt
messaging-kernel/bindings/nodejs/: Cargo.toml  package.json
messaging-kernel/bindings/nodejs/src/: lib.rs
messaging-kernel/bindings/pwa/: package.json
messaging-kernel/bindings/python/: Cargo.toml  pyproject.toml
messaging-kernel/bindings/python/src/: lib.rs
messaging-kernel/bindings/react-native/: package.json
messaging-kernel/bindings/swift/: Package.swift
messaging-kernel/bindings/swift/Sources/Core/: NeoProtocolCore.swift
messaging-kernel/bindings/swift/Sources/HTTP2/: HTTP2Transport.swift
messaging-kernel/bindings/swift/Sources/NeoProtocol/: NeoProtocol.swift
messaging-kernel/bindings/swift/Sources/WebSocket/: WebSocketTransport.swift
messaging-kernel/compiler/cli/: Cargo.toml
messaging-kernel/compiler/cli/src/: main.rs
messaging-kernel/compiler/codegen/: Cargo.toml
messaging-kernel/compiler/codegen/src/: advanced_generators.rs  error.rs  lib.rs  multi_platform.rs  rust_generator.rs
messaging-kernel/compiler/lexer/: Cargo.toml
messaging-kernel/compiler/lexer/src/: error.rs  lib.rs  token.rs
messaging-kernel/compiler/parser/: Cargo.toml
messaging-kernel/compiler/parser/src/: ast.rs  error.rs  lib.rs  parser.rs
messaging-kernel/core/neo-protocol/: Cargo.toml
messaging-kernel/core/neo-protocol/benches/: comprehensive_benchmarks.rs  protocol_benchmarks.rs
messaging-kernel/core/neo-protocol/src/: adaptive_performance.rs  ai_optimization.rs  client.rs  cluster.rs  codec.rs  enterprise.rs  enterprise_monitoring.rs  error.rs  lib.rs  message.rs  monitoring.rs  optimization.rs  quantum_cryptography.rs  security.rs  server.rs  service.rs  sla_compliance.rs
messaging-kernel/core/neo-protocol/tests/: integration_tests.rs
messaging-kernel/core/neoship-manifest/: Cargo.toml
messaging-kernel/core/neoship-manifest/src/: error.rs  lib.rs
messaging-kernel/core/precursor-broker/: Cargo.toml
messaging-kernel/core/precursor-broker/benches/: broker_benchmarks.rs
messaging-kernel/core/precursor-broker/src/: advanced_replication.rs  cluster.rs  compression.rs  consensus.rs  consumer.rs  consumer_groups.rs  enhanced_broker.rs  error.rs  lib.rs  memory.rs  monitoring.rs  networking.rs  producer.rs  queue.rs  replication.rs  security.rs  segment_storage.rs  storage.rs  topic.rs
messaging-kernel/core/precursor-broker/tests/: integration_tests.rs
messaging-kernel/core/qiss-format/: Cargo.toml
messaging-kernel/core/qiss-format/src/: codec.rs  error.rs  lib.rs  reader.rs  types.rs  writer.rs
messaging-kernel/docker/: Dockerfile  docker-compose.yml
messaging-kernel/examples/: enhanced-broker-example.rs  enterprise-config.toml  enterprise-example.rs
messaging-kernel/examples/hello-world/: neoship.lift  user-service.neo
messaging-kernel/k8s/: configmap.yaml  namespace.yaml  neo-core-deployment.yaml  neo-core-service.yaml
messaging-kernel/plugins/: plugin-system.md
messaging-kernel/runtime/rust/: Cargo.toml
messaging-kernel/runtime/rust/src/: event.rs  lib.rs  prelude.rs  rpc.rs  service.rs
messaging-kernel/scripts/: build-phase2.sh  build-phase3.sh
messaging-kernel/tools/benchmarks/: Cargo.toml
messaging-kernel/tools/benchmarks/src/: broker.rs  lib.rs  rpc.rs  serialization.rs
messaging-kernel/tools/debugger/: Cargo.toml
messaging-kernel/tools/debugger/src/: debugger.rs  inspector.rs  lib.rs
messaging-kernel/tools/migration/: Cargo.toml
messaging-kernel/tools/migration/src/: lib.rs  main.rs
messaging-kernel/tools/neo-cli/: Cargo.toml
messaging-kernel/tools/neo-cli/src/: main.rs
