[package]
name = "neo-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance RPC protocol implementation"

[dependencies]
tokio.workspace = true
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bincode = "1.3"
crc32fast = "1.0"
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
opentelemetry-semantic-conventions = "0.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "protocol_benchmarks"
harness = false
