[package]
name = "neo-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance RPC protocol implementation"

[dependencies]
tokio.workspace = true
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bincode = "1.3"
crc32fast = "1.0"
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
opentelemetry-semantic-conventions = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
rustls = "0.21"
webpki = "0.22"
rustls-pemfile = "1.0"
jsonwebtoken = "9.2"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "protocol_benchmarks"
harness = false
