[package]
name = "precursor-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in message broker with zero-copy optimization"

[dependencies]
tokio.workspace = true
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
