[package]
name = "precursor-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in message broker with zero-copy optimization"

[dependencies]
tokio.workspace = true
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bincode = "1.3"
crc32fast = "1.0"
memmap2 = "0.9"
lz4-flex = "0.11"
zstd = "0.13"
brotli = "3.4"
snap = "1.1"
lzma-rs = "0.3"
flate2 = "1.0"
rayon = "1.8"
num_cpus = "1.16"
getifaddrs = "0.8"
async-trait = "0.1"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = "0.3"
async-trait = "0.1"

[[bench]]
name = "broker_benchmarks"
harness = false

[[example]]
name = "enhanced-broker-example"
path = "../../examples/enhanced-broker-example.rs"
