[package]
name = "qiss-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Binary serialization format optimized for speed"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytemuck = { version = "1.0", features = ["derive"] }
zerocopy = { version = "0.7", features = ["derive"] }
crc32fast = "1.0"

[dev-dependencies]
tokio-test = "0.4"
