[package]
name = "neo-runtime-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust runtime for Neo messaging kernel"

[dependencies]
qiss-format = { path = "../../core/qiss-format" }
neo-protocol = { path = "../../core/neo-protocol" }
precursor-broker = { path = "../../core/precursor-broker" }
tokio = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"