[package]
name = "neo-migration"
version = "0.1.0"
edition = "2021"
authors = ["Neo Qiss"]
license = "MIT OR Apache-2.0"
description = "Migration tools for converting REST, gRPC, GraphQL to Neo protocol"
repository = "https://github.com/neo-qiss/messaging-kernel"

[[bin]]
name = "neo-migrate"
path = "src/main.rs"

[dependencies]
# Core dependencies
neo-protocol = { path = "../../core/neo-protocol" }
neo-codegen = { path = "../../compiler/codegen" }
neo-plugin-system = { path = "../../plugins" }

# CLI
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# File handling
walkdir = "2.4"
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress bars
indicatif = "0.17"

# JSON schema validation
jsonschema = "0.17"

# OpenAPI parsing
openapi = "0.1"

# Protocol Buffers
prost = "0.12"
prost-types = "0.12"

# GraphQL parsing
graphql-parser = "0.4"

# YAML parsing
yaml-rust = "0.4"

# XML parsing (for WSDL)
quick-xml = "0.31"

# CSV parsing
csv = "1.3"

# Database support
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }

# Template engine
handlebars = "4.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.21"

# URL parsing
url = "2.5"

# Regex
regex = "1.10"

# Chrono for date/time
chrono = { version = "0.4", features = ["serde"] }

# Path handling
pathdiff = "0.2"

# Git support
git2 = "0.18"

# Compression
flate2 = "1.0"

# Checksums
sha2 = "0.10"
md5 = "0.7"

# Configuration
config = "0.13"

# Environment variables
dotenv = "0.15"

# File watching
notify = "6.1"

# Parallel processing
rayon = "1.8"

# Memory usage
memmap2 = "0.9"

# Network
socket2 = "0.5"

# TLS
rustls = "0.21"
rustls-pemfile = "1.0"

# WebSocket
tokio-tungstenite = "0.21"

# Message queues
rdkafka = "0.36"
lapin = "2.3"
aws-sdk-sqs = "1.0"

# Database migrations
migrate = "0.1"

# Testing
tempfile = "3.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
mockito = "1.2"